Added logout functionality
